example/node/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-node
  namespace: example-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-node
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: example-node
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: server
          image: localhost:5001/nodeexample:3
          ports:
            - containerPort: 3000
