example/node/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-node
  namespace: example-node
  labels:
    app: example-node 
spec:
  selector:
    app: example-node
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
