example/node/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-node-ingress
  namespace: example-node
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
    - http:
        paths:
          - path: /example-node(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: example-node
                port:
                  number: 80
